更新线上配置

--- a/dataAnalysis/uwsgi.ini
+++ b/dataAnalysis/uwsgi.ini
@@ -1,5 +1,8 @@
 [uwsgi]
-http = 127.0.0.1:8000
+# 连接Nginx时使用
+socket=127.0.0.1:8000
+# 直接做web服务器时使用
+# http = 127.0.0.1:8000
 chdir = /Users/llsh/PycharmProjects/pythonProject/dataAnalysis
 wsgi-file = dataAnalysis/wsgi.py
 processes = 4
